--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css",
+              "src/assets/bootstrap.css",
+              "src/assets/all.css"
             ],
             "scripts": []
           },
